--- a/style.css
+++ b/style.css
@@ -434,6 +434,51 @@ nav {
   font-size: 1.1rem;
   margin-top: 10px;
 }
+#campus{
+  background-color: #7d95a4;
+}
+.life-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  cursor: pointer;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+}
+
+.life-card img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+  transition: transform 0.5s ease;
+}
+
+/* Overlay text */
+.life-overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.65);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+
+  opacity: 0;
+  transform: translatex(100%);
+  transition: all 0.4s ease;
+}
+
+/* Hover effects */
+.life-card:hover img {
+  transform: scale(1.1);
+}
+
+.life-card:hover .life-overlay {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 .footer-section {
   background: #1a2744;
