--- a/partials/footer.html
+++ b/partials/footer.html
@@ -19,7 +19,7 @@
       <div class="container">
         <!-- University Info -->
         <div class="footer-logo-section">
-          <img src="images/gvit.png" alt="GVIT Logo" class="footer-logo" />
+          <img src="../images/gvit.png" alt="GVIT Logo" class="footer-logo" />
           <h3 class="footer-university-name">GVIT</h3>
           <p class="footer-address">
             GVIT, Jyoti Vihar, Burla,<br />
