added the admission part

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -105,10 +105,10 @@
             Admission
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="admission/ug.html">UG</a></li>
-            <li><a class="dropdown-item" href="admission/pg.html">PG</a></li>
-            <li><a class="dropdown-item" href="admission/phd.html">PhD</a></li>
-            <li><a class="dropdown-item" href="admission/notice.html">Admission Notice</a></li>
+            <li><a class="dropdown-item" href="/college_website/admission/ug.html">UG</a></li>
+            <li><a class="dropdown-item" href="/college_website/admission/pg.html">PG</a></li>
+            <li><a class="dropdown-item" href="/college_website/admission/phd.html">PhD</a></li>
+            <li><a class="dropdown-item" href="/college_website/admission/notice.html">Admission Notice</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -122,7 +122,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="admission/ug.html">UG</a></li>
-            <li><a class="dropdown-item" href="admission/pg.html">PG</a></li>
+            <li><a class="dropdown-item" href="">PG</a></li>
             <li><a class="dropdown-item" href="admission/phd.html">PhD</a></li>
             <li><a class="dropdown-item" href="admission/notice.html">Admission Notice</a></li>
           </ul>
@@ -164,7 +164,7 @@
 
         <!-- LOGIN -->
         <li class="nav-item">
-          <a class="nav-link btn btn-dark text-white px-3 ms-lg-2" href="login.html">
+          <a class="btn btn-outline-danger  text-dark fw-bold ms-lg-2" href="login.html">
             Login
           </a>
         </li>
