--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -24,159 +24,218 @@
         />
       </div>
     </section>
-     <section class="bg-warning d-flex align-items-center">
-  <nav class="navbar navbar-expand-lg navbar-custom bg-warning">
-  <div class="container-fluid">
-
-    <!-- TOGGLER -->
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#mainNavbar"
-      aria-controls="mainNavbar"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <!-- NAV LINKS -->
-    <div class="collapse navbar-collapse" id="mainNavbar">
-      <ul class="navbar-nav ms-auto align-items-center">
-
-        <!-- HOME ICON -->
-        <li class="nav-item">
-          <a class="nav-link" href="" data-home="home">
-            <i class="fas fa-house"></i>
-          </a>
-        </li>
-
-        <!-- HOME SECTIONS -->
-        <li class="nav-item">
-          <a class="nav-link" href="" data-home="about">About Us</a>
-        </li>
-
-        <!-- ACADEMICS -->
-        <li class="nav-item dropdown">
-  <a
-    class="nav-link dropdown-toggle"
-    href="#"
-    role="button"
-    data-bs-toggle="dropdown"
-    aria-expanded="false"
-  >
-    Academics
-  </a>
-
-  <ul class="dropdown-menu">
-    <li>
-      <a class="dropdown-item" href="/college_website/academics/courses.html">
-        Courses
-      </a>
-    </li>
-    <li>
-      <a class="dropdown-item" href="/college_website/academics/departments.html">
-        Departments
-      </a>
-    </li>
-    <li>
-      <a class="dropdown-item" href="/college_website/academics/academic-calendar.html">
-        Academic Calendar
-      </a>
-    </li>
-    <li>
-      <a class="dropdown-item" href="/college_website/academics/syllabus.html">
-        Syllabus
-      </a>
-    </li>
-  </ul>
-</li>
-
-
-        <!-- ADMISSION -->
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
+    <section class="bg-warning d-flex align-items-center">
+      <nav class="navbar navbar-expand-lg navbar-custom bg-warning">
+        <div class="container-fluid">
+          <!-- TOGGLER -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mainNavbar"
+            aria-controls="mainNavbar"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
           >
-            Admission
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/college_website/admission/ug.html">UG</a></li>
-            <li><a class="dropdown-item" href="/college_website/admission/pg.html">PG</a></li>
-            <li><a class="dropdown-item" href="/college_website/admission/phd.html">PhD</a></li>
-            <li><a class="dropdown-item" href="/college_website/admission/notice.html">Admission Notice</a></li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-          >
-            Colleges
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="admission/ug.html">UG</a></li>
-            <li><a class="dropdown-item" href="">PG</a></li>
-            <li><a class="dropdown-item" href="admission/phd.html">PhD</a></li>
-            <li><a class="dropdown-item" href="admission/notice.html">Admission Notice</a></li>
-          </ul>
-        </li>
-        <!-- FACILITIES -->
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-          >
-            Facilities
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="facilities/library.html">Library</a></li>
-            <li><a class="dropdown-item" href="facilities/hostel.html">Hostel</a></li>
-            <li><a class="dropdown-item" href="facilities/labs.html">Laboratories</a></li>
-            <li><a class="dropdown-item" href="facilities/sports.html">Sports</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="" data-home="placement">Placements</a>
-        </li>
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <li class="nav-item">
-          <a class="nav-link" href="" data-home="research">Research</a>
-        </li>
+          <!-- NAV LINKS -->
+          <div class="collapse navbar-collapse" id="mainNavbar">
+            <ul class="navbar-nav ms-auto align-items-center">
+              <!-- HOME ICON -->
+              <li class="nav-item">
+                <a class="nav-link" href="" data-home="home">
+                  <i class="fas fa-house"></i>
+                </a>
+              </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="" data-home="campus">Life at Campus</a>
-        </li>
+              <!-- HOME SECTIONS -->
+              <li class="nav-item">
+                <a class="nav-link" href="" data-home="about">About Us</a>
+              </li>
 
+              <!-- ACADEMICS -->
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Academics
+                </a>
 
-        <!-- CELLS / MISC -->
-        <li class="nav-item">
-          <a class="nav-link" href="" data-home="cell">Cell / Misc</a>
-        </li>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/college_website/academics/courses.html"
+                    >
+                      Courses
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/college_website/academics/departments.html"
+                    >
+                      Departments
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/college_website/academics/academic-calendar.html"
+                    >
+                      Academic Calendar
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/college_website/academics/syllabus.html"
+                    >
+                      Syllabus
+                    </a>
+                  </li>
+                </ul>
+              </li>
 
-        <!-- LOGIN -->
-        <li class="nav-item">
-          <a class="btn btn-outline-danger  text-dark fw-bold ms-lg-2" href="login.html">
-            Login
-          </a>
-        </li>
+              <!-- ADMISSION -->
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                >
+                  Admission
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/college_website/admission/ug.html"
+                      >UG</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/college_website/admission/pg.html"
+                      >PG</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/college_website/admission/phd.html"
+                      >PhD</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="/college_website/admission/notice.html"
+                      >Admission Notice</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                >
+                  Colleges
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="admission/ug.html">UG</a>
+                  </li>
+                  <li><a class="dropdown-item" href="">PG</a></li>
+                  <li>
+                    <a class="dropdown-item" href="admission/phd.html">PhD</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="admission/notice.html"
+                      >Admission Notice</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <!-- FACILITIES -->
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                >
+                  Facilities
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="/college_website/facilities/library.html"
+                      >Library</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/college_website/facilities/hostel.html"
+                      >Hostel</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/college_website/facilities/labs.html"
+                      >Laboratories</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/college_website/facilities/sports.html"
+                      >Sports</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="" data-home="placement">Placements</a>
+              </li>
 
-      </ul>
-    </div>
-  </div>
-</nav>
+              <li class="nav-item">
+                <a class="nav-link" href="" data-home="research">Research</a>
+              </li>
 
-</section>
+              <li class="nav-item">
+                <a class="nav-link" href="" data-home="campus"
+                  >Life at Campus</a
+                >
+              </li>
+
+              <!-- CELLS / MISC -->
+              <li class="nav-item">
+                <a class="nav-link" href="" data-home="cell">Cell / Misc</a>
+              </li>
+
+              <!-- LOGIN -->
+              <li class="nav-item">
+                <a
+                  class="btn btn-outline-danger text-dark fw-bold ms-lg-2"
+                  href="login.html"
+                >
+                  Login
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-<script src="partials.js"></script>  
-</body>
+    <script src="partials.js"></script>
+  </body>
 </html>
