bug fixes and added image gallery to facilities section

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/college_website/style.css" />
   </head>
   <body>
-    <section class="header-section">
+    <section class="header-section" id="home">
       <div class="container-fluid p-0">
         <img
           src="/college_website/images/header.jpg"
@@ -45,7 +45,7 @@
             <ul class="navbar-nav ms-auto align-items-center">
               <!-- HOME ICON -->
               <li class="nav-item">
-                <a class="nav-link" href="" data-home="home">
+                <a class="nav-link" href="#" data-home="home">
                   <i class="fas fa-house"></i>
                 </a>
               </li>
