removed college section from navbar

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -144,7 +144,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="nav-item dropdown">
+              <!--<li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -167,7 +167,7 @@
                     >
                   </li>
                 </ul>
-              </li>
+              </li>-->
               <!-- FACILITIES -->
               <li class="nav-item dropdown">
                 <a
